# deno_build_issue

./: Cargo.toml  build.rs
src/: main.rs
