[package]
name = "deno_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
rusty_v8 = "0.32.1"
deno_core = "0.105.0"
deno_webidl = "0.23.0"
deno_url = "0.23.0"
deno_web = "0.54.0"
deno_crypto = "0.37.0"
serde_v8 = "0.16.0"

[build-dependencies]
rusty_v8 = "0.32.1"
deno_core = "0.105.0"
deno_webidl = "0.23.0"
deno_console = "0.23.0"
deno_crypto = "0.37.0"
deno_web = "0.54.0"
deno_url = "0.23.0"
